<resources>
    <string name="app_name">iPlay</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_account">You don\'t have account</string>
    <string name="signup">Signup</string>
    <string name="forget_pass">Forget password</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="network_problem">Please check your network connection</string>
    <string name="authentication_failed">Please try again</string>
    <string name="enter_mail_pass">Mail or password is empty</string>
    <string name="rest">Rest password</string>
    <string name="rest_pass">Rest password</string>
    <string name="enter_mail">Please enter your mail</string>
    <string name="check_mail">Please check your mail</string>
    <string name="register">Register</string>
    <string name="weak_password">Weak password</string>
    <string name="email_badly_formatted">Please check that you have entered the email correctly</string>
    <string name="mail_in_use">Mail is already in used</string>
    <string name="try_again">Please try again</string>
    <string name="verify_mail_text">Please check your email. We\'ve sent you an email and we\'re waiting for your approval</string>
    <string name="send_again">Send again</string>
    <string name="logout">Logout</string>
    <string name="mail_resend">Resend mail to</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="create_username">Create your username</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="empty_username">Username can\'t be empty</string>
    <string name="username_used">Username is already in use</string>
    <string name="search_tournament">Search for tournament</string>
    <string name="create_tournament">Create tournament</string>
    <string name="slogan">Because I want to play</string>
    <string name="my_profile">My profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout">Do you sure?</string>
    <string name="city">City</string>
    <string name="place">Place</string>
    <string name="sport">Sport</string>
    <string name="max_participants">Max participants</string>
    <string name="time">Time</string>
    <string name="code">Code</string>
    <string name="private_switch">Private</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="not_valid">You need to fill in all the form</string>
    <string name="tournament_has_create">Your tournament has been created</string>
    <string name="registered_tournament">Registered Tournament</string>
    <string name="search_for_tournament">Find your results here</string>
    <string name="result_not_found">Sorry, no tournament has been found</string>
    <string name="time_not_valid">Time is not valid for today</string>
    <string name="max_player_not_valid">The max player need to be bigger than 1</string>
    <string name="code_empty">You need to fill in the code for private tournament</string>
    <string name="is_private">Private</string>
    <string name="tournament_full">This tournament is full</string>
    <string name="is_private_tournament">This is private tournament</string>
    <string name="enter_private_code">Enter private code</string>
    <string name="ok">OK</string>
    <string name="empty_code">Please enter the code of the tournament</string>
    <string name="invalid_code">Wrong code</string>
    <string name="is_public">Public</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="join_tournament">Join to tournament</string>
    <string name="join">Join</string>
    <string name="players">Players</string>
    <string name="tournament_has_deleted">Tournament has deleted</string>
    <string name="delete_this_tournament">Do you sure?</string>
    <string name="is_look_like_tournament_full">It\'s look like this tournament is full, next time be faster</string>
    <string name="add_success">You join to this tournament</string>
    <string name="already_register">You already register to this tournament</string>
    <string name="is_look_like_tournament_delete">The tournament has deleted</string>
    <string name="you_leave_tournament">You had leave the tournament</string>
    <string name="tournament_end">This tournament start now</string>
    <string name="delimiter">:</string>
    <string name="title_gps">GPS</string>
    <string name="message_gps">This apps need your gps location to set your city</string>
    <string name="proflie_image">Profile image</string>
    <string name="write_permission">The app need to permission to write profile picture</string>
    <string name="read_permission">The app need permission to read profile image from the phone</string>
    <string name="storage_access">Storage access</string>
    <string name="update_done">Your profile is up-to-date!</string>
    <string name="please_wait_login">Please wait while we log you in ;)</string>
    <string name="please_wait_rest_password">Please wait while we send you mail to your mail to rest the password</string>
    <string name="please_wait_register">Plase wait while we create new user for you</string>
    <string name="mail_verify">Mail verification</string>
    <string name="new_username">New username</string>
    <string name="please_wait_update_proflie">Please wait while we update your profile image</string>
    <string name="update_image_profile">Update profile image</string>
    <string name="please_wait_search">Please be patient while we are searching for tournament</string>
    <string name="please_wait_create">Please be patient while we are creating your tournament</string>

</resources>
